# ciff

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
ciff/: README.md  build.rs
ciff/src/: binary_collection.rs  ciff2pisa.rs  lib.rs  pisa2ciff.rs
ciff/tests/: toy.rs
proto/: CMakeLists.txt  common-index-format.proto
pyciff/: Cargo.toml
pyciff/pyciff/: __init__.py
pyciff/src/: lib.rs
pyciff/tests/: test_pyciff.py
python/: common_index_format_pb2.py  generate_pisa_index_from_ciff.py
rust/: Cargo.toml  build.rs
rust/.cargo/: config
rust/proto/: common-index-format-v1.proto  common-index-format.proto
rust/src/: main.rs
rust/src/proto/: common_index_format.rs  mod.rs
src/: CMakeLists.txt  binary_collection.rs  ciff2jsonl.rs  ciff2pisa.rs  generate_pisa_index.cpp  jsonl2ciff.rs  lib.rs  main.rs  payload_vector.rs  pisa2ciff.rs
src/proto/: common_index_format_v1.rs  mod.rs
test/: CMakeLists.txt  cif_test.cpp
tests/: toy.rs
tests/test_data/: terms.lex  terms.txt  toy-complete-20200309.ciff
