[package]
name = "ciff"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "ciff2pisa"
path = "src/ciff2pisa.rs"

[[bin]]
name = "pisa2ciff"
path = "src/pisa2ciff.rs"

[dependencies]
protobuf = "2.14"
structopt = "0.3"
num = "0.2"
indicatif = "0.13"
anyhow = "1.0"
memmap = "0.7"

[build-dependencies]
protobuf-codegen-pure = "2.14"

[dev-dependencies]
tempfile = "3"
