[package]
name = "ciff"
version = "0.1.1" # remember to update html_root_url
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pisa-engine/ciff"
readme = "README.md"
keywords = ["ciff", "pisa"]
documentation = "https://docs.rs/ciff"
description = "The inverted index exchange format as defined as part of the Open-Source IR Replicability Challenge (OSIRRC) initiative"
build = "build.rs"

[[bin]]
name = "ciff2pisa"
path = "src/ciff2pisa.rs"

[[bin]]
name = "pisa2ciff"
path = "src/pisa2ciff.rs"

[dependencies]
protobuf = "2.22"
structopt = "0.3"
num = "0.4"
indicatif = "0.15"
anyhow = "1.0"
memmap = "0.7"

[build-dependencies]
protobuf-codegen-pure = "2.22"

[dev-dependencies]
tempfile = "3"
quickcheck = "1"
quickcheck_macros = "1"
