[package]
name = "ciff"
version = "0.3.1" # remember to update html_root_url
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>", "Joel Mackenzie <joelmmackenzie@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/pisa-engine/ciff"
readme = "README.md"
keywords = ["ciff", "pisa"]
documentation = "https://docs.rs/ciff"
description = "The inverted index exchange format as defined as part of the Open-Source IR Replicability Challenge (OSIRRC) initiative"
build = "build.rs"

[[bin]]
name = "ciff2pisa"
path = "src/ciff2pisa.rs"

[[bin]]
name = "pisa2ciff"
path = "src/pisa2ciff.rs"

[[bin]]
name = "jsonl2ciff"
path = "src/jsonl2ciff.rs"

[dependencies]
protobuf = "2.28.0"
structopt = "0.3"
num-traits = "0"
indicatif = "0.15"
anyhow = "1.0"
memmap = "0.7"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
protobuf-codegen-pure = "2.22"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
